--- a/Final Report.html
+++ b/Final Report.html
@@ -1002,7 +1002,7 @@ figcaption {
 <p>Finally, we obtained an overview of the categories of neighborhoods in city Toronto underneath,</p>
 <ul>
 <li>Cluster 0: downtown with high living cost or crowded space. A reversed 'T' formed region can be obviously discovered. The price tier of this region is about 1M-3M. This cluster should be the best choices of people working in the downtown and can bear the small space with affordable price.</li>
-<li>Cluster 1: Luxus areas. The price tier can approach to '&gt;5M'. This cluster is suitable for rich people.</li>
+<li>Cluster 1: Luxury areas. The price tier can approach to '&gt;5M'. This cluster is suitable for rich people.</li>
 <li>Cluster 2: Mid-high living cost. it is teared apart by Cluster 0 from the middle. This cluster is the best for the mid-class.</li>
 <li>Cluster 3-7: neighbours far away from the center with different features.</li>
 </ul>
